
* We have added the predicates write_array/5 and write_array/6 to the io
  module; these predicates write arrays using a user-specified procedure
  to write the elements and separating the elements with a user-specified
  separator string.

* io.print and string_writer.print now print arbitrary precision integers
  in their decimal form instead of printing their underlying representation.

* We have added a module for discrete interval encoding trees, which are a
  highly efficient set implementation for fat sets.  This module is a
  contribution from Yes Logic Pty. Ltd.

+ We have added two new modules for concurrent programming: thread.barrier
  and thread.future.  The barrier module provides a barrier type which can
  be used to control progress in concurrent code.  The future module
  provides future and future_io data types which can be used to compute
  values in parallel using other threads.  These modules were contributed by
  Mission Critical IT.

* We have added thread.spawn_native/4 to dedicate an OS thread to a Mercury
  thread. thread.spawn/4 was added as well.

+ We have deprecated the impure init/1 function in thread.semaphore.

* In C grades, the math module now provides the fused multiply-add operation
  on platforms that support it.

* Procedures in the store module no longer acquire the global lock.

* The following predicates and functions have been added to the char module:

    - is_decimal_digit/1
    - is_base_digit/2
    - int_to_binary_digit/2, det_int_to_binary_digit/1
    - int_to_octal_digit/2, det_int_to_octal_digit/1
    - int_to_decimal_digit/2, det_int_to_decimal_digit/1
    - int_to_hex_digit/2, det_int_to_hex_digit/1
    - base_int_to_digit/3, det_base_int_to_digit/2
    - binary_digit_to_int/2, det_binary_digit_to_int/1
    - octal_digit_to_int/2, det_octal_digit_to_int/1
    - decimal_digit_to_int/2, det_decimal_digit_to_int/1
    - hex_digit_to_int/2, det_hex_digit_to_int/1
    - base_digit_to_int/3, det_base_digit_to_int/2